--- a/pages/_includes/page.html
+++ b/pages/_includes/page.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="{% block page_viewport %}width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no{% endblock %}" />
     {% block head_resources %}{% endblock %}
   </head>
-  <body>
+  <body{% block body_attrs %}{% endblock %}>
     {% block body %}{% endblock %}
   </body>
 </html>
