--- a/comp/hotels/results/results.css
+++ b/comp/hotels/results/results.css
@@ -18,6 +18,47 @@
 	float: left;
 	width: 290px;
 }
+.rvc--hotels--results .filters-title {
+	padding: 0 0 32px;
+	font-family: 'Montserrat', sans-serif;
+	font-size: 22px;
+	letter-spacing: 1px;
+}
+.rvc--hotels--results .control-slider {
+	padding: 11px 26px;
+}
+.rvc--hotels--results .control-track {
+	position: relative;
+	height: 4px;
+	background: #d0d0d0;
+}
+.rvc--hotels--results .control-range-active {
+	position: absolute;
+	left: 0;
+	top: 0;
+	width: 0px;
+	height: 100%;
+	background: #f98100;
+}
+.rvc--hotels--results .control-handle {
+	position: absolute;
+	top: 50%;
+	width: 26px;
+	height: 26px;
+	margin: -13px 0;
+	background: #fff;
+	border: 4px solid #f98100;
+	border-radius: 13px;
+	cursor: pointer;
+}
+.rvc--hotels--results .control-handle.min {
+	left: 0%;
+	margin-left: -26px;
+}
+.rvc--hotels--results .control-handle.max {
+	left: 100%;
+	margin-right: -26px;
+}
 .rvc--hotels--results .result-list {
 	float: right;
 	width: 900px;
